--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -54,7 +54,14 @@
 <script>
     window.sr=ScrollReveal();
       
-   
+   setTimeout(()=>{
+let element = document.querySelectorAll(".scroll");
+
+element.forEach((e)=>{
+e.classList.remove("d-none");
+sr.reveal('.scroll', { duration: 2000 }, 50);
+   },3000)
+});
 
 
     $(document).on("click", ".flip-container", function () {
