--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -3,9 +3,10 @@
 
 <head>
   <title>{{title}}</title>
-  <link rel="shortcut icon" href="/images/cart.svg" type="image/x-icon">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  <link rel="shortcut icon" href="https://www.j2store.org/images/themeparrot/home_page/shopping-cart.png" type="image/x-icon">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+ 
     
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   <link rel='stylesheet' href='/stylesheets/style.css' />
