--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,10 @@
+<div class="mt-5"></div>
 <footer class="bg-dark text-center fixed-bottom">
-     <h5>GameCart</h5>
-  2018 All RightReversed &copy; <a href="https://github.com/TKdevlop/ShoppingCart-Nodejs" class="btn-btn-link"><i class="fab fa-github"></i></a>
+  <div class="container">
+  <div class="row justify-content-md-center">
+    <div class="sm-12-md-6 w-50">GameCart 2018 All Right Reversed &copy; &nbsp;  <a href="https://github.com/TKdevlop/ShoppingCart-Nodejs" class="btn-btn-link"><i class="fab fa-github"></i></a></div>
+    <div class="sm-12-md-6 w-50 ">Designed & coded with &nbsp;<span style="color:red;"><i class="fas fa-heart"></i></span></div>
+  </div>
+  </div>
 </footer>
 
