--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,16 +8,20 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="input-group py-1 px-2 px-md-0">
-                <input class="form-control form-control-dark" type="text" placeholder="Search for Product and More..." aria-label="Search">
+  
+            <form class="input-group py-1 px-2 px-md-0" action="/product/filter" method="POST">
+              
+                  <input name="data" class="data form-control form-control-dark" type="text" placeholder="Search for Product and More..." aria-label="Search">
+             
+    
+                
                 <div class="input-group-append">
-                    <button class="btn btn-outline-info" type="submit">
+                    <button class="btn-submit btn btn-outline-info" type="submit">
                         <i class="fa fa-search"></i>
                     </button>
-                </div>
+                </form>
+              
             </div>
-
             <ul class="navbar-nav navbar-expand-md pl-2 pr-3">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto text-nowrap">
@@ -41,8 +45,8 @@
                                 aria-expanded="false"><i class="fa fa-folder-open" aria-hidden="true"></i>   More</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 {{# if login}}
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user"></i>My Order</a>
+                                <a class="dropdown-item" href="/user/additems">
+                                   <i class="fas fa-sitemap"></i>Add Items</a>
                                 <hr>
                                 <a class="dropdown-item" href="/user/logout">
                                     <i class="fas fa-sign-out-alt"></i> Logout</a>
@@ -69,3 +73,7 @@
     </nav>
 </div>
 </div>
+
+<script>
+
+</script>
