--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,15 +1,19 @@
 <div class="row">
-    <div class="col-md-6 col-md-4 mx-auto">
+    <div class="col-md-6 col-md-4 mx-auto mt-5">
         <div id="success" class="alert alert-success {{#if noMessage}} d-none{{/if}}">
             {{successMsg}}
+        </div>
+         <div id="success" class="display-4 {{#if products.length}} d-none{{/if}}">
+           No Product found by name : {{data}}
         </div>
     </div>
 </div>
 {{# each products}}
+
 <div class="row">
     {{# each this}}
-    <div class="col-md-6 col-sm-12 col-lg-3 my-3">
-        <div class="card d-none scroll" style="width: 18rem;">
+    <div  class="col-md-6 col-12 col-lg-3 my-3 mb-5">
+        <div style="margin:0 auto !important" class="card d-none scroll" style="width: 18rem;">
 
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                 <div class="flipper">
@@ -18,7 +22,7 @@
                             <img class="card-img-top image" src="{{this.imagePath}}" alt="Card image cap">
 
                             <div class="middle">
-                                <div class="text rounded btn btn-info ">Know More</div>
+                                <div class="text rounded btn btn-info">Know More</div>
                             </div>
                         </div>
                     </div>
