--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,7 +1,7 @@
 <div style="color:black"class="row">
     <div class="col-md-6 mx-auto">
-       <h1 class="text-white text-center">User Profile</h1>
-       <hr>
+       <h1 class="text-white text-center">Welcome {{ userName }}</h1>
+       <hr> 
        <h2 class="text-white text-center">My Orders</h2>
 {{# each orders}}
 <ul class="list-group mt-3">
