--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,7 +1,9 @@
 <div class="row mt-5">
     
     <div class="col-md-4 m-md-auto text-center m-2">
+   
         <h1>SIGN UP</h1>
+             <p style="font-size:12px">*This for demo purpose no real email will require though.</p>
         {{#if hasError}}
         <div class="alert alert-danger">
             {{# each messages}}
