--- a/views/user/addItems.hbs
+++ b/views/user/addItems.hbs
@@ -94,7 +94,7 @@
                 <div class="col-sm-6 form-group mx-auto">
                     <label for="email">
                         price:</label>
-                    <input placeholder="Price of product" type="number" class="form-control"  name="price" maxlength="10">
+                    <input placeholder="Price of product"  id="price" class="form-control"  name="price" maxlength="10">
                 </div>
             </div>
             <div class="row">
@@ -116,11 +116,17 @@
 
     </div>
 </div>
-
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-storage.js"></script>
 <script>
     // Initialize Firebase
     var config = {
+        apiKey: "AIzaSyD6rhFCcxNfTAl2ICQrnMWWY6ZW3dPEKHg",
+    authDomain: "portfolio-bec76.firebaseapp.com",
+    databaseURL: "https://portfolio-bec76.firebaseio.com",
+    projectId: "portfolio-bec76",
+    storageBucket: "portfolio-bec76.appspot.com",
+    messagingSenderId: "35511303712"
     //your firebase credentails
     };
     firebase.initializeApp(config);
@@ -132,7 +138,7 @@
     const image = document.querySelector("img");
     const url = document.querySelector(".ImageURL");
     const title = document.querySelector(".title");
-    const price = document.querySelector(".price");
+    const price = document.querySelector("#price");
     const description = document.querySelector(".description");
     let form = document.querySelector('#add-product');
   
